Sprint 4 Commit and push