@@ -6,15 +6,15 @@ import com.ust.pos.model.CartEntry;
 import com.ust.pos.model.CartEntryRepository;
 import com.ust.pos.model.Price;
 import com.ust.pos.model.PriceRepository;
-
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.Mockito;
 import org.modelmapper.ModelMapper;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
+import java.lang.reflect.Type;
 import java.math.BigDecimal;
 import java.util.Collections;
 import java.util.List;
@@ -37,85 +37,84 @@ class CartEntryServiceTest {
     @InjectMocks
     private CartEntryServiceImpl cartEntryService;
 
-    @Test
-    void testSave_NewEntry() {
+    private CartEntry cartEntry;
+    private CartEntryDto cartEntryDto;
+    private Price price;
 
-        CartEntryDto dto = new CartEntryDto();
-        dto.setProduct("P1");
-        dto.setCart("C1");
-        dto.setQuantity(BigDecimal.valueOf(2));
+    @BeforeEach
+    void setUp() {
+        cartEntry = new CartEntry();
+        cartEntry.setIdentifier("P1-C1");
+        cartEntry.setQuantity(BigDecimal.valueOf(2));
 
-        Price price = new Price();
-        price.setMrp(BigDecimal.valueOf(120));
+        cartEntryDto = new CartEntryDto();
+        cartEntryDto.setProduct("P1");
+        cartEntryDto.setCart("C1");
+        cartEntryDto.setQuantity(BigDecimal.ONE);
+
+        price = new Price();
         price.setSellingPrice(BigDecimal.valueOf(100));
+        price.setMrp(BigDecimal.valueOf(120));
+    }
 
+    @Test
+    void testSave_NewCartEntry() {
         when(cartEntryRepository.findByIdentifier("P1-C1")).thenReturn(null);
         when(priceRepository.findByIdentifier("P1")).thenReturn(price);
 
-        CartEntryDto result = cartEntryService.save(dto);
+        doNothing().when(modelMapper).map(eq(cartEntryDto), any(CartEntry.class));
 
-        assertEquals("P1-C1", result.getIdentifier());
-        assertEquals(BigDecimal.valueOf(200), result.getTotalPrice());
-        assertEquals(BigDecimal.valueOf(40), result.getDiscount());
+        CartEntryDto result = cartEntryService.save(cartEntryDto);
+
+        assertNotNull(result);
+        assertEquals(BigDecimal.ONE, result.getQuantity());
+        assertEquals(BigDecimal.valueOf(100), result.getSellingPrice());
+        assertEquals(BigDecimal.valueOf(100), result.getTotalPrice());
+        assertEquals(BigDecimal.valueOf(20), result.getDiscount());
+
+        verify(cartEntryRepository).save(any(CartEntry.class));
+    }
+
+
+    @Test
+    void testSave_ExistingCartEntry() {
+        when(cartEntryRepository.findByIdentifier("P1-C1")).thenReturn(cartEntry);
+        when(priceRepository.findByIdentifier("P1")).thenReturn(price);
+
+        CartEntryDto result = cartEntryService.save(cartEntryDto);
+
+        // existing qty = 2 + new qty = 1 => 3
+        assertEquals(BigDecimal.valueOf(3), result.getQuantity());
+        assertEquals(BigDecimal.valueOf(300), result.getTotalPrice()); // 100 * 3
+        assertEquals(BigDecimal.valueOf(60), result.getDiscount());   // 20 * 3
 
         verify(cartEntryRepository).save(any(CartEntry.class));
     }
 
     @Test
-    void testSave_ExistingEntry() {
+    void testDeleteAllByCart_WithData() {
+        List<CartEntry> list = Collections.singletonList(cartEntry);
 
-        CartEntryDto dto = new CartEntryDto();
-        dto.setProduct("P1");
-        dto.setCart("C1");
-        dto.setQuantity(BigDecimal.valueOf(2));
-
-        CartEntry existing = new CartEntry();
-        existing.setQuantity(BigDecimal.valueOf(3));
-
-        Price price = new Price();
-        price.setMrp(BigDecimal.valueOf(120));
-        price.setSellingPrice(BigDecimal.valueOf(100));
-
-        when(cartEntryRepository.findByIdentifier("P1-C1")).thenReturn(existing);
-        when(priceRepository.findByIdentifier("P1")).thenReturn(price);
-
-        CartEntryDto result = cartEntryService.save(dto);
-
-        // 3(existing) + 2(new) = 5
-        assertEquals(BigDecimal.valueOf(5), result.getQuantity());
-        assertEquals(BigDecimal.valueOf(500), result.getTotalPrice());
-
-        verify(cartEntryRepository).save(existing);
-    }
-
-    @Test
-    void testDeleteAllByCart() {
-
-        when(cartEntryRepository.findByCart("C1"))
-                .thenReturn(Collections.singletonList(new CartEntry()));
+        when(cartEntryRepository.findByCart("C1")).thenReturn(list);
 
         cartEntryService.deleteAllByCart("C1");
 
-        verify(cartEntryRepository).deleteAll(anyList());
+        verify(cartEntryRepository).deleteAll(list);
     }
 
     @Test
     void testDeleteAllByCart_Empty() {
-
-        when(cartEntryRepository.findByCart("C1"))
-                .thenReturn(Collections.emptyList());
+        when(cartEntryRepository.findByCart("C1")).thenReturn(Collections.emptyList());
 
         cartEntryService.deleteAllByCart("C1");
 
         verify(cartEntryRepository, never()).deleteAll(any());
     }
 
+    // ✅ DELETE BY IDENTIFIER - SUCCESS
     @Test
-    void testDeleteByIdentifier() {
-
-        CartEntry entry = new CartEntry();
-
-        when(cartEntryRepository.findByIdentifier("P1-C1")).thenReturn(entry);
+    void testDeleteByIdentifier_Success() {
+        when(cartEntryRepository.findByIdentifier("P1-C1")).thenReturn(cartEntry);
 
         cartEntryService.deleteByIdentifier("P1-C1");
 
@@ -124,27 +123,20 @@ class CartEntryServiceTest {
 
     @Test
     void testDeleteByIdentifier_NotFound() {
-
         when(cartEntryRepository.findByIdentifier("P1-C1")).thenReturn(null);
 
-        Exception ex = assertThrows(IllegalArgumentException.class, () ->
-                cartEntryService.deleteByIdentifier("P1-C1"));
-
-        assertEquals("CartEntry not found", ex.getMessage());
+        assertThrows(IllegalArgumentException.class, () ->
+                cartEntryService.deleteByIdentifier("P1-C1")
+        );
     }
 
     @Test
     void testFindAllCarts() {
+        List<CartEntry> list = Collections.singletonList(cartEntry);
+        List<CartEntryDto> dtoList = Collections.singletonList(cartEntryDto);
 
-        List<CartEntry> entityList = Collections.singletonList(new CartEntry());
-        List<CartEntryDto> dtoList = Collections.singletonList(new CartEntryDto());
-
-        when(cartEntryRepository.findByCart("C1")).thenReturn(entityList);
-
-        when(modelMapper.map(
-                eq(entityList),
-                any(java.lang.reflect.Type.class)
-        )).thenReturn(dtoList);
+        when(cartEntryRepository.findByCart("C1")).thenReturn(list);
+        when(modelMapper.map(eq(list), any(Type.class))).thenReturn(dtoList);
 
         List<CartEntryDto> result = cartEntryService.findAllCarts("C1");
 
@@ -154,24 +146,17 @@ class CartEntryServiceTest {
 
     @Test
     void testFindActiveStatus() {
-        CartEntry active = new CartEntry();
-        active.setStatus(true);
-
+        cartEntry.setStatus(true);
         CartEntry inactive = new CartEntry();
         inactive.setStatus(false);
 
-        when(cartEntryRepository.findAll())
-                .thenReturn(List.of(active, inactive));
+        List<CartEntry> list = List.of(cartEntry, inactive);
 
-        CartEntryDto dto = new CartEntryDto();
-        List<CartEntryDto> expectedDtoList = List.of(dto);
+        when(cartEntryRepository.findAll()).thenReturn(list);
+        when(modelMapper.map(any(), any(Type.class)))
+                .thenReturn(Collections.singletonList(cartEntryDto));
 
-        when(modelMapper.map(
-                Mockito.eq(List.of(active)),
-                Mockito.any(java.lang.reflect.Type.class)))
-                .thenReturn(expectedDtoList);
-
-        List<CartEntryDto> result = cartEntryService.findActiveStatus(); // Note: Update variable name to cartEntryService if you renamed it
+        List<CartEntryDto> result = cartEntryService.findActiveStatus();
 
         assertNotNull(result);
         assertEquals(1, result.size());
