@@ -1,31 +1,26 @@
 package com.ust.pos;
 
-import com.ust.pos.dto.WsDto;
-import com.ust.pos.node.service.impl.NodeServiceImpl;
 import com.ust.pos.dto.NodeDto;
+import com.ust.pos.dto.WsDto;
 import com.ust.pos.model.*;
-import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.Assertions;
+import com.ust.pos.node.service.impl.NodeServiceImpl;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.modelmapper.ModelMapper;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.Mockito;
+import org.mockito.Spy;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.modelmapper.ModelMapper;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
-import org.springframework.data.domain.Pageable;
-import org.springframework.security.core.Authentication;
-import org.springframework.security.core.context.SecurityContext;
+import org.springframework.data.domain.*;
+import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.security.core.userdetails.UserDetails;
-import java.lang.reflect.Type;
-import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.mockito.Mockito.when;
+import java.lang.reflect.Type;
+import java.util.*;
+
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 class NodeServiceTest {
@@ -39,241 +34,183 @@ class NodeServiceTest {
     @Mock
     private ModelMapper modelMapper;
 
+    @Spy
     @InjectMocks
     private NodeServiceImpl nodeService;
 
+    private Node node;
+    private NodeDto nodeDto;
+    private User user;
+
+    @BeforeEach
+    void setUp() {
+        node = new Node();
+        node.setIdentifier("N1");
+        node.setStatus(true);
+        node.setDeleted(false);
+        node.setRoles(List.of("ADMIN")); // roles in Node are List
+
+        nodeDto = new NodeDto();
+        nodeDto.setIdentifier("N1");
+
+        user = new User();
+        user.setUsername("testUser");
+        user.setRoles(List.of("ADMIN")); // roles in User are Set ✅
+    }
+    // ✅ FIND BY IDENTIFIER
     @Test
-    void findAll_success() {
+    void testFindByIdentifier() {
+        when(nodeRepository.findByIdentifier("N1")).thenReturn(node);
+        when(modelMapper.map(node, NodeDto.class)).thenReturn(nodeDto);
 
-        Node node = new Node();
-        NodeDto dto = new NodeDto();
-        Pageable pageable = Mockito.mock(Pageable.class);
+        NodeDto result = nodeService.findByIdentifier("N1");
 
-        Page<Node> page = new PageImpl<>(List.of(node));
+        assertNotNull(result);
+    }
 
-        when(nodeRepository.findAll(Mockito.any(Pageable.class)))
-                .thenReturn(page);
+    // ✅ FIND ALL (Pagination)
+    @Test
+    void testFindAll() {
+        Pageable pageable = PageRequest.of(0, 10);
+        Page<Node> page = new PageImpl<>(Collections.singletonList(node));
 
-        when(modelMapper.map(
-                        Mockito.eq(List.of(node)),
-                        Mockito.any(Type.class)))
-                .thenReturn(List.of(dto));
+        when(nodeRepository.findByDeletedFalse(pageable)).thenReturn(page);
+        when(modelMapper.map(any(), any(Type.class)))
+                .thenReturn(Collections.singletonList(nodeDto));
 
-        WsDto<NodeDto> result =
-                nodeService.findAll(pageable);
+        WsDto<NodeDto> result = nodeService.findAll(pageable);
 
         assertNotNull(result);
         assertEquals(1, result.getDtoList().size());
-        assertEquals(1, result.getTotalRecords());    }
-
-    @Test
-    void save_success() {
-
-        NodeDto input = new NodeDto();
-        input.setIdentifier("NODE1");
-
-        when(nodeRepository.findByIdentifier("NODE1"))
-                .thenReturn(null);
-
-        Node entity = new Node();
-
-        when(modelMapper.map(input, Node.class))
-                .thenReturn(entity);
-
-        when(nodeRepository.save(entity))
-                .thenReturn(entity);
-
-        NodeDto result = nodeService.save(input);
-
-        Assertions.assertTrue(result.isSuccess());
     }
 
+    // ✅ SAVE - SUCCESS
     @Test
-    void save_failure_duplicate() {
+    void testSave_Success() {
+        when(nodeRepository.findByIdentifier("N1")).thenReturn(null);
+        when(modelMapper.map(nodeDto, Node.class)).thenReturn(node);
 
-        NodeDto input = new NodeDto();
-        input.setIdentifier("NODE1");
+        doNothing().when(nodeService).setAuditFields(node, true);
 
-        when(nodeRepository.findByIdentifier("NODE1"))
-                .thenReturn(new Node());
+        NodeDto result = nodeService.save(nodeDto);
 
-        NodeDto result = nodeService.save(input);
-
-        Assertions.assertFalse(result.isSuccess());
-    }
-
-    @Test
-    void findByIdentifier_success() {
-
-        Node node = new Node();
-        node.setIdentifier("NODE1");
-
-        NodeDto dto = new NodeDto();
-        dto.setIdentifier("NODE1");
-
-        when(nodeRepository.findByIdentifier("NODE1"))
-                .thenReturn(node);
-
-        when(modelMapper.map(node, NodeDto.class))
-                .thenReturn(dto);
-
-        NodeDto result = nodeService.findByIdentifier("NODE1");
-
-        assertEquals("NODE1", result.getIdentifier());
-    }
-
-    @Test
-    void update_success() {
-
-        NodeDto input = new NodeDto();
-        input.setIdentifier("NODE1");
-
-        Node existing = new Node();
-
-        when(nodeRepository.findByIdentifier("NODE1"))
-                .thenReturn(existing);
-
-        Mockito.doNothing()
-                .when(modelMapper).map(input, existing);
-
-        when(nodeRepository.save(existing))
-                .thenReturn(existing);
-
-        NodeDto result = nodeService.update(input);
-
-        assertEquals("NODE1", result.getIdentifier());
-    }
-
-    @Test
-    void update_failure_notFound() {
-
-        NodeDto input = new NodeDto();
-        input.setIdentifier("NODE1");
-
-        when(nodeRepository.findByIdentifier("NODE1"))
-                .thenReturn(null);
-
-        NodeDto result = nodeService.update(input);
-
-        Assertions.assertFalse(result.isSuccess());
-    }
-
-    @Test
-    void delete_success() {
-
-        Mockito.doNothing()
-                .when(nodeRepository).deleteByIdentifier("NODE1");
-
-        nodeService.delete("NODE1");
-
-        Mockito.verify(nodeRepository)
-                .deleteByIdentifier("NODE1");
-    }
-
-    @Test
-    void changeToggleStatus_success() {
-
-        Node node = new Node();
-        node.setStatus(false);
-
-        NodeDto dto = new NodeDto();
-
-        when(nodeRepository.findByIdentifier("NODE1"))
-                .thenReturn(node);
-
-        when(nodeRepository.save(node))
-                .thenReturn(node);
-
-        when(modelMapper.map(node, NodeDto.class))
-                .thenReturn(dto);
-
-        NodeDto result =
-                nodeService.changeToggleStatus("NODE1", true);
-
-        Assertions.assertTrue(node.isStatus());
         assertNotNull(result);
+        verify(nodeRepository).save(node);
     }
 
+    // ✅ SAVE - ALREADY EXISTS
     @Test
-    void getNodesForRoles_success() {
+    void testSave_AlreadyExists() {
+        when(nodeRepository.findByIdentifier("N1")).thenReturn(node);
 
-        UserDetails principal =
-                new org.springframework.security.core.userdetails.User(
-                        "john", "password", List.of()
-                );
+        NodeDto result = nodeService.save(nodeDto);
 
-        Authentication authentication = Mockito.mock(Authentication.class);
-        when(authentication.getPrincipal()).thenReturn(principal);
+        assertFalse(result.isSuccess());
+        assertTrue(result.getMessage().contains("already exists"));
+    }
 
-        SecurityContext context = Mockito.mock(SecurityContext.class);
-        when(context.getAuthentication()).thenReturn(authentication);
+    // ✅ SAVE - SOFT DELETED
+    @Test
+    void testSave_SoftDeleted() {
+        node.setDeleted(true);
 
-        SecurityContextHolder.setContext(context);
+        when(nodeRepository.findByIdentifier("N1")).thenReturn(node);
 
-        User user = new User();
-        user.setUsername("john");
-        user.setRoles(List.of("ADMIN"));
+        NodeDto result = nodeService.save(nodeDto);
 
-        when(userRepository.findByUsername("john"))
-                .thenReturn(user);
+        assertFalse(result.isSuccess());
+        assertTrue(result.getMessage().contains("soft deleted"));
+    }
 
-        Node node1 = new Node();
-        node1.setIdentifier("NODE1");
-        node1.setRoles(List.of("ADMIN"));
+    // ✅ UPDATE - SUCCESS
+    @Test
+    void testUpdate_Success() {
+        when(nodeRepository.findByIdentifier("N1")).thenReturn(node);
 
-        Node node2 = new Node();
-        node2.setIdentifier("NODE2");
-        node2.setRoles(List.of("USER"));
+        doNothing().when(modelMapper).map(nodeDto, node);
+        doNothing().when(nodeService).setAuditFields(node, false);
 
-        when(nodeRepository.findAll())
-                .thenReturn(List.of(node1, node2));
+        NodeDto result = nodeService.update(nodeDto);
 
-        NodeDto dto = new NodeDto();
+        assertNotNull(result);
+        verify(nodeRepository).save(node);
+    }
 
-        when(nodeRepository.findByIdentifier("NODE1"))
-                .thenReturn(node1);
+    // ✅ UPDATE - NOT FOUND
+    @Test
+    void testUpdate_NotFound() {
+        when(nodeRepository.findByIdentifier("N1")).thenReturn(null);
 
-        when(modelMapper.map(node1, NodeDto.class))
-                .thenReturn(dto);
+        NodeDto result = nodeService.update(nodeDto);
+
+        assertFalse(result.isSuccess());
+        assertTrue(result.getMessage().contains("not found"));
+    }
+
+    // ✅ DELETE
+    @Test
+    void testDelete() {
+        when(nodeRepository.findByIdentifier("N1")).thenReturn(node);
+
+        doNothing().when(nodeService).softDelete(node);
+        doNothing().when(nodeService).setAuditFields(node, false);
+
+        nodeService.delete("N1");
+
+        verify(nodeRepository).save(node);
+    }
+
+    // ✅ GET NODES FOR ROLES (SECURITY CONTEXT)
+    @Test
+    void testGetNodesForRoles() {
+        // Mock Spring Security Context
+        org.springframework.security.core.userdetails.User principal =
+                new org.springframework.security.core.userdetails.User("testUser", "password", new ArrayList<>());
+
+        SecurityContextHolder.getContext().setAuthentication(
+                new UsernamePasswordAuthenticationToken(principal, null)
+        );
+
+        when(userRepository.findByUsername("testUser")).thenReturn(user);
+        when(nodeRepository.findAll()).thenReturn(Collections.singletonList(node));
+        when(nodeRepository.findByIdentifier("N1")).thenReturn(node);
+        when(modelMapper.map(node, NodeDto.class)).thenReturn(nodeDto);
 
         List<NodeDto> result = nodeService.getNodesForRoles();
 
-        assertEquals(1, result.size());
-    }
-
-    @Test
-    void testFindActiveStatus() {
-        // 1. Arrange: Create Node data
-        Node active = new Node();
-        active.setStatus(true);
-
-        Node inactive = new Node();
-        inactive.setStatus(false);
-
-        // Stub the repository to return both active and inactive nodes
-        when(nodeRepository.findAll())
-                .thenReturn(List.of(active, inactive));
-
-        // Prepare the expected DTO output list
-        NodeDto dto = new NodeDto();
-        List<NodeDto> expectedDtoList = List.of(dto);
-
-        // FIX: Stub modelMapper to expect the precisely filtered list and ANY generic Type
-        when(modelMapper.map(
-                Mockito.eq(List.of(active)),
-                Mockito.any(java.lang.reflect.Type.class)))
-                .thenReturn(expectedDtoList);
-
-        // 2. Act: Call your service layer method
-        List<NodeDto> result = nodeService.findActiveStatus();
-
-        // 3. Assert: Verify the behavior
         assertNotNull(result);
         assertEquals(1, result.size());
     }
 
-    @AfterEach
-    void tearDown() {
-        SecurityContextHolder.clearContext();
+    // ✅ CHANGE TOGGLE STATUS
+    @Test
+    void testChangeToggleStatus() {
+        when(nodeRepository.findByIdentifier("N1")).thenReturn(node);
+        when(modelMapper.map(node, NodeDto.class)).thenReturn(nodeDto);
+
+        NodeDto result = nodeService.changeToggleStatus("N1", false);
+
+        assertNotNull(result);
+        assertFalse(node.isStatus());
+        verify(nodeRepository).save(node);
+    }
+
+    // ✅ FIND ACTIVE STATUS
+    @Test
+    void testFindActiveStatus() {
+        node.setStatus(true);
+        Node inactive = new Node();
+        inactive.setStatus(false);
+
+        List<Node> nodes = List.of(node, inactive);
+
+        when(nodeRepository.findAll()).thenReturn(nodes);
+        when(modelMapper.map(any(), any(Type.class)))
+                .thenReturn(Collections.singletonList(nodeDto));
+
+        List<NodeDto> result = nodeService.findActiveStatus();
+
+        assertNotNull(result);
+        assertEquals(1, result.size());
     }
 }
