@@ -5,23 +5,22 @@ import com.ust.pos.dto.WsDto;
 import com.ust.pos.model.Stock;
 import com.ust.pos.model.StockRepository;
 import com.ust.pos.stock.service.impl.StockServiceImpl;
-import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.modelmapper.ModelMapper;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.Mockito;
+import org.mockito.Spy;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.modelmapper.ModelMapper;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
-import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.*;
+
 import java.lang.reflect.Type;
+import java.util.Collections;
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.mockito.Mockito.when;
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 class StockServiceTest {
@@ -32,203 +31,147 @@ class StockServiceTest {
     @Mock
     private ModelMapper modelMapper;
 
+    @Spy
     @InjectMocks
     private StockServiceImpl stockService;
 
+    private Stock stock;
+    private StockDto stockDto;
+
+    @BeforeEach
+    void setUp() {
+        stock = new Stock();
+        stock.setIdentifier("ST1");
+        stock.setStatus(true);
+        stock.setDeleted(false);
+
+        stockDto = new StockDto();
+        stockDto.setIdentifier("ST1");
+    }
+
+    // ✅ FIND ALL (Pagination)
     @Test
-    void findAll_success() {
+    void testFindAll() {
+        Pageable pageable = PageRequest.of(0, 10);
+        Page<Stock> page = new PageImpl<>(Collections.singletonList(stock));
 
-        Stock stock = new Stock();
-        StockDto dto = new StockDto();
-        Pageable pageable = Mockito.mock(Pageable.class);
+        when(stockRepository.findByDeletedFalse(pageable)).thenReturn(page);
+        when(modelMapper.map(any(), any(Type.class)))
+                .thenReturn(Collections.singletonList(stockDto));
 
-        Page<Stock> page = new PageImpl<>(List.of(stock));
-
-        when(stockRepository.findAll(Mockito.any(Pageable.class)))
-                .thenReturn(page);
-
-        when(modelMapper.map(
-                        Mockito.eq(List.of(stock)),
-                        Mockito.any(Type.class)))
-                .thenReturn(List.of(dto));
-
-        WsDto<StockDto> result =
-                stockService.findAll(pageable);
+        WsDto<StockDto> result = stockService.findAll(pageable);
 
         assertNotNull(result);
         assertEquals(1, result.getDtoList().size());
-        assertEquals(1, result.getTotalRecords());    }
-
-    @Test
-    void save_success() {
-
-        StockDto input = new StockDto();
-        input.setIdentifier("STOCK01");
-
-        when(stockRepository.findByIdentifier("STOCK01"))
-                .thenReturn(null);
-
-        Stock entity = new Stock();
-
-        when(modelMapper.map(input, Stock.class))
-                .thenReturn(entity);
-
-        when(stockRepository.save(entity))
-                .thenReturn(entity);
-
-        StockDto result = stockService.save(input);
-
-        assertEquals("STOCK01", result.getIdentifier());
-        Assertions.assertTrue(result.isSuccess());
+        assertEquals(1, result.getTotalRecords());
     }
 
+    // ✅ DELETE (Soft Delete)
     @Test
-    void save_failure_duplicate() {
+    void testDelete() {
+        when(stockRepository.findByIdentifier("ST1")).thenReturn(stock);
 
-        StockDto input = new StockDto();
-        input.setIdentifier("STOCK01");
+        doNothing().when(stockService).softDelete(stock);
+        doNothing().when(stockService).setAuditFields(stock, false);
 
-        when(stockRepository.findByIdentifier("STOCK01"))
-                .thenReturn(new Stock());
+        stockService.delete("ST1");
 
-        StockDto result = stockService.save(input);
-
-        Assertions.assertFalse(result.isSuccess());
-        assertNotNull(result.getMessage());
+        verify(stockRepository).save(stock);
     }
 
+    // ✅ FIND BY IDENTIFIER
     @Test
-    void findByIdentifier_success() {
+    void testFindByIdentifier() {
+        when(stockRepository.findByIdentifier("ST1")).thenReturn(stock);
+        when(modelMapper.map(stock, StockDto.class)).thenReturn(stockDto);
 
-        Stock stock = new Stock();
-        stock.setIdentifier("STOCK01");
+        StockDto result = stockService.findByIdentifier("ST1");
 
-        StockDto dto = new StockDto();
-        dto.setIdentifier("STOCK01");
-
-        when(stockRepository.findByIdentifier("STOCK01"))
-                .thenReturn(stock);
-
-        when(modelMapper.map(stock, StockDto.class))
-                .thenReturn(dto);
-
-        StockDto result =
-                stockService.findByIdentifier("STOCK01");
-
-        assertEquals("STOCK01", result.getIdentifier());
-    }
-
-    @Test
-    void update_success() {
-
-        StockDto input = new StockDto();
-        input.setIdentifier("STOCK01");
-
-        Stock existing = new Stock();
-
-        when(stockRepository.findByIdentifier("STOCK01"))
-                .thenReturn(existing);
-
-        Mockito.doNothing()
-                .when(modelMapper).map(input, existing);
-
-        when(stockRepository.save(existing))
-                .thenReturn(existing);
-
-        StockDto result = stockService.update(input);
-
-        assertEquals("STOCK01", result.getIdentifier());
-    }
-
-    @Test
-    void delete_success() {
-
-        Mockito.doNothing()
-                .when(stockRepository).deleteByIdentifier("STOCK01");
-
-        stockService.delete("STOCK01");
-
-        Mockito.verify(stockRepository)
-                .deleteByIdentifier("STOCK01");
-    }
-
-    @Test
-    void changeToggleStatus_enable() {
-
-        Stock stock = new Stock();
-        stock.setStatus(false);
-
-        StockDto dto = new StockDto();
-
-        when(stockRepository.findByIdentifier("STOCK01"))
-                .thenReturn(stock);
-
-        when(stockRepository.save(stock))
-                .thenReturn(stock);
-
-        when(modelMapper.map(stock, StockDto.class))
-                .thenReturn(dto);
-
-        StockDto result =
-                stockService.changeToggleStatus("STOCK01", true);
-
-        Assertions.assertTrue(stock.isStatus());
         assertNotNull(result);
     }
 
+    // ✅ UPDATE
     @Test
-    void changeToggleStatus_disable() {
+    void testUpdate() {
+        when(stockRepository.findByIdentifier("ST1")).thenReturn(stock);
 
-        Stock stock = new Stock();
-        stock.setStatus(true);
+        doNothing().when(modelMapper).map(stockDto, stock);
+        doNothing().when(stockService).setAuditFields(stock, false);
 
-        StockDto dto = new StockDto();
+        StockDto result = stockService.update(stockDto);
 
-        when(stockRepository.findByIdentifier("STOCK01"))
-                .thenReturn(stock);
-
-        when(stockRepository.save(stock))
-                .thenReturn(stock);
-
-        when(modelMapper.map(stock, StockDto.class))
-                .thenReturn(dto);
-
-        StockDto result =
-                stockService.changeToggleStatus("STOCK01", false);
-
-        Assertions.assertFalse(stock.isStatus());
         assertNotNull(result);
+        verify(stockRepository).save(stock);
     }
 
+    // ✅ CHANGE TOGGLE STATUS
+    @Test
+    void testChangeToggleStatus() {
+        when(stockRepository.findByIdentifier("ST1")).thenReturn(stock);
+        when(modelMapper.map(stock, StockDto.class)).thenReturn(stockDto);
+
+        StockDto result = stockService.changeToggleStatus("ST1", false);
+
+        assertNotNull(result);
+        assertFalse(stock.isStatus());
+        verify(stockRepository).save(stock);
+    }
+
+    // ✅ FIND ACTIVE STATUS
     @Test
     void testFindActiveStatus() {
-        // 1. Arrange: Create Stock data
-        Stock active = new Stock();
-        active.setStatus(true);
+        stock.setStatus(true);
 
         Stock inactive = new Stock();
         inactive.setStatus(false);
 
-        // Stub the repository to return both active and inactive stocks
-        when(stockRepository.findAll())
-                .thenReturn(List.of(active, inactive));
+        List<Stock> stocks = List.of(stock, inactive);
 
-        // Prepare the expected DTO output list
-        StockDto dto = new StockDto();
-        List<StockDto> expectedDtoList = List.of(dto);
+        when(stockRepository.findAll()).thenReturn(stocks);
+        when(modelMapper.map(any(), any(Type.class)))
+                .thenReturn(Collections.singletonList(stockDto));
 
-        // FIX: Stub modelMapper to expect the precisely filtered list and ANY generic Type
-        when(modelMapper.map(
-                Mockito.eq(List.of(active)),
-                Mockito.any(java.lang.reflect.Type.class)))
-                .thenReturn(expectedDtoList);
-
-        // 2. Act: Call your service layer method
         List<StockDto> result = stockService.findActiveStatus();
 
-        // 3. Assert: Verify the behavior
-        assertNotNull(result, "The result list should not be null");
-        assertEquals(1, result.size(), "The result list should contain exactly 1 active stock");
+        assertNotNull(result);
+        assertEquals(1, result.size());
+    }
+
+    // ✅ SAVE - NEW STOCK
+    @Test
+    void testSave_NewStock() {
+        when(stockRepository.findByIdentifier("ST1")).thenReturn(null);
+        when(modelMapper.map(stockDto, Stock.class)).thenReturn(stock);
+
+        doNothing().when(stockService).setAuditFields(stock, true);
+
+        StockDto result = stockService.save(stockDto);
+
+        assertNotNull(result);
+        verify(stockRepository).save(stock);
+    }
+
+    // ✅ SAVE - ALREADY EXISTS
+    @Test
+    void testSave_AlreadyExists() {
+        when(stockRepository.findByIdentifier("ST1")).thenReturn(stock);
+
+        StockDto result = stockService.save(stockDto);
+
+        assertFalse(result.isSuccess());
+        assertTrue(result.getMessage().contains("already exists"));
+    }
+
+    // ✅ SAVE - SOFT DELETED
+    @Test
+    void testSave_SoftDeleted() {
+        stock.setDeleted(true);
+
+        when(stockRepository.findByIdentifier("ST1")).thenReturn(stock);
+
+        StockDto result = stockService.save(stockDto);
+
+        assertFalse(result.isSuccess());
+        assertTrue(result.getMessage().contains("soft deleted"));
     }
 }
-
